--- a/DanielWillett.MathMatrix/DanielWillett.MathMatrix.csproj
+++ b/DanielWillett.MathMatrix/DanielWillett.MathMatrix.csproj
@@ -10,7 +10,7 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 
     <CircularCompilation>True</CircularCompilation>
-    <CircularCompilation Condition="'$(CircularCompilation)' And exists('../UnturnedAssetSpec/bin/$(Configuration)/$(TargetFramework)/UnturnedAssetSpec.dll')">True</CircularCompilation>
+    <CircularCompilation Condition="'$(CircularCompilation)' And !exists('../UnturnedAssetSpec/bin/$(Configuration)/$(TargetFramework)/UnturnedAssetSpec.dll')">False</CircularCompilation>
     <DefineConstants Condition="'$(CircularCompilation)' == 'True'">$(DefineConstants);SUBSEQUENT_COMPILE</DefineConstants>
   </PropertyGroup>
 
