--- a/Asset Spec/sdg.unturned.itemthrowableasset, assembly-csharp.json
+++ b/Asset Spec/sdg.unturned.itemthrowableasset, assembly-csharp.json
@@ -16,7 +16,7 @@
                 "Type": "LegacyAssetReferenceString",
                 "AssetType": "SDG.Unturned.EffectAsset, Assembly-CSharp"
             },
-            "DefaultValue": "00000000000000000000000000000000",
+            "DefaultValue": "00000000-0000-0000-0000-000000000000",
             "Description": "Explosion effect to play upon detonation.",
             "Docs": "https://docs.smartlydressedgames.com/en/stable/items/throwable-asset.html#throwable-asset-properties",
             "Variable": "explosionEffectGuid",
@@ -62,7 +62,6 @@
             [
                 {
                     "Key": "Explode_On_Impact",
-                    "Value": "*",
                     "Condition":
                     {
                         "And":
@@ -169,14 +168,14 @@
     "BundleAssets":
     [
         {
-            "AssetName": "Use",
+            "Key": "Use",
             "Type": "UnityEngine.AudioClip, UnityEngine.AudioModule",
             "Description": "The sound played when the item is thrown.",
             "Variable": "use",
             "Required": true
         },
         {
-            "AssetName": "Throwable",
+            "Key": "Throwable",
             "Type": "UnityEngine.GameObject, UnityEngine.CoreModule",
             "Description": "The sound played when the item is thrown.",
             "Variable": "throwable",
