--- a/UnturnedAssetSpec/UnturnedAssetSpec.csproj
+++ b/UnturnedAssetSpec/UnturnedAssetSpec.csproj
@@ -89,4 +89,8 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Values\PropertyRefs\" />
+  </ItemGroup>
+
 </Project>
