--- a/UnturnedAssetSpecTests/UnturnedAssetSpecTests.csproj
+++ b/UnturnedAssetSpecTests/UnturnedAssetSpecTests.csproj
@@ -19,6 +19,7 @@
 
     <StrongNameKeyPath>C:\Strong Name Keys\UnturnedAssetSpec\UnturnedAssetSpec_Tests.dll.snk</StrongNameKeyPath>
     <TestLsp>False</TestLsp>
+    <SuppressTfmSupportBuildWarnings>true</SuppressTfmSupportBuildWarnings>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)' == 'net9.0'">
